MDEV-20479 assertion failure in dict_table_get_nth_col() after INSTANT DROP COLUMN

get_col_list_to_be_dropped() incorrectly returned uninteresting instantly
dropped column which was missing in a new dict_index_t

get_col_list_to_be_dropped(): rename to collect_columns_from_dropped_indexes
and stop return dropped columns